--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
+  
   <title>Sample Page</title>
-  <body>
+  <body bgcolor="yellow">
     <H1> Hello World</H1>
    <p> Some para </p>
   </body>
