--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<html>
-  
-  <title>Sample Page</title>
+---
+layout: default
+---
   <body bgcolor="yellow">
     <H1> Hello World</H1>
     <p> SUHANI'S learning</p>
    <p> Some para </p>
   </body>
-</html>
