--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ layout: default
   <body bgcolor="yellow">
     <H1> Hello World</H1>
     <p> SUHANI'S learning</p>
-   <p> Some para </p>
+    <p> <a href = "projects.html>Please check all the repos here</a> </p>
   </body>
