--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ layout: default
     <H1> Hello World</H1>
     <p> SUHANI'S learning <br>
     Adding some more line
-    <p> <a href = "projects.html>Please check all the repos here</a> </p>
+    <p> <a href = "projects.html">Please check all the repos here</a> </p>
   </body>
